Make code compile after entity changes